--- a/app/src/main/res/layout-land/activity_org.xml
+++ b/app/src/main/res/layout-land/activity_org.xml
@@ -123,7 +123,8 @@
                     android:id="@+id/editTextPassword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:accentType="all"
+                    app:accentType="character"
+                    app:mask=""
                     app:digitBackground="@android:color/white"
                     app:digitTextColor="@color/colorAccent"
                     app:digitElevation="5dp"
