--- a/app/src/main/res/layout-land/activity_pin_layout.xml
+++ b/app/src/main/res/layout-land/activity_pin_layout.xml
@@ -58,7 +58,8 @@
                     android:id="@+id/userpin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:accentType="all"
+                    app:accentType="character"
+                    app:mask=""
                     app:digitBackground="@android:color/white"
                     app:digitTextColor="@color/colorAccent"
                     app:digitElevation="5dp"
@@ -87,7 +88,8 @@
                     android:id="@+id/confirmuserpin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:accentType="all"
+                    app:accentType="character"
+                    app:mask=""
                     app:digitBackground="@android:color/white"
                     app:digitTextColor="@color/colorAccent"
                     app:digitElevation="5dp"
