--- a/app/src/main/res/layout/activity_daily_teaching.xml
+++ b/app/src/main/res/layout/activity_daily_teaching.xml
@@ -153,7 +153,7 @@
                     android:orientation="vertical"
                      android:id="@+id/pointslinear"
                      android:layout_width="match_parent"
-                     android:layout_height="match_parent"
+                     android:layout_height="wrap_content"
                      android:layout_marginTop="5dp">
 
                     <TextView
@@ -197,7 +197,7 @@
                     android:orientation="horizontal"
                     android:weightSum="1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
 
                     <Button
