--- a/app/src/main/res/layout/activity_pin_layout.xml
+++ b/app/src/main/res/layout/activity_pin_layout.xml
@@ -42,7 +42,7 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="40dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp">
 
@@ -58,7 +58,8 @@
                         android:id="@+id/userpin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:accentType="all"
+                        app:accentType="character"
+                        app:mask=""
                         app:digitBackground="@android:color/white"
                         app:digitTextColor="@color/colorAccent"
                         app:digitElevation="5dp"
@@ -72,7 +73,7 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp">
 
@@ -87,7 +88,8 @@
                         android:id="@+id/confirmuserpin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:accentType="all"
+                        app:accentType="character"
+                        app:mask=""
                         app:digitBackground="@android:color/white"
                         app:digitTextColor="@color/colorAccent"
                         app:digitElevation="5dp"
@@ -101,7 +103,7 @@
                     android:id="@+id/loginuser"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="30dp"
                     android:gravity="center"
                     android:textColor="@color/colorWhite"
                     android:layout_gravity="center"
