--- a/app/src/main/res/layout/eracord_items.xml
+++ b/app/src/main/res/layout/eracord_items.xml
@@ -22,8 +22,8 @@
         android:clickable="false">
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:visibility="visible"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="8dp"
@@ -40,8 +40,11 @@
             android:textAllCaps="false"
             android:fontFamily="sans-serif-smallcaps"
             android:textColor="@drawable/left_links"
-            android:textSize="12sp"
+            android:textSize="16sp"
             android:paddingBottom="10dp"
-            android:cursorVisible="true" />
+            android:cursorVisible="true"
+            android:textStyle="normal|bold" />
+
+
     </LinearLayout>
 </LinearLayout>
