--- a/app/src/main/res/layout-land/activity_org.xml
+++ b/app/src/main/res/layout-land/activity_org.xml
@@ -27,13 +27,13 @@
                 android:text="@string/email"
                 android:textStyle="bold"
                 android:textColor="@color/colorAccent"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:layout_gravity="end"
                 android:id="@+id/useremail"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="30dp"
-                android:textAlignment="center"
+                android:textAlignment="viewStart"
                 android:textAllCaps="true" />
 
             <LinearLayout
