--- a/app/src/main/res/layout/points_row.xml
+++ b/app/src/main/res/layout/points_row.xml
@@ -23,7 +23,7 @@
         android:paddingBottom="5dp" />
 
     <CheckBox
-        android:id="@+id/point_chkSelected"
+        android:id="@+id/pr_chkSelected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
