--- a/app/src/main/res/layout/eracord_items.xml
+++ b/app/src/main/res/layout/eracord_items.xml
@@ -3,8 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <ImageView
+    android:orientation="vertical">
+
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/drawer_items"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:background="@drawable/draweritem_select"
+            android:orientation="horizontal">
+
+
+
+        <ImageView
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:visibility="visible"
@@ -26,4 +39,5 @@
         android:textSize="18sp"
         android:paddingBottom="10dp"
         android:cursorVisible="true" />
+</LinearLayout>
 </LinearLayout>
