--- a/app/src/main/res/layout-land/student_catalog.xml
+++ b/app/src/main/res/layout-land/student_catalog.xml
@@ -75,7 +75,7 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:fillViewport="true"
                 android:id="@+id/scrollView_st_catalog">
 
