--- a/app/src/main/res/layout/student_catalog_item.xml
+++ b/app/src/main/res/layout/student_catalog_item.xml
@@ -20,7 +20,7 @@
                 android:layout_height="45dp"
                 android:src="@drawable/student"
                 app:civ_border_width="1dp"
-                app:civ_border_color="@color/colorWhite"
+                app:civ_border_color="@color/bottomLine"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:elevation="1dp"
