--- a/app/src/main/res/layout/presenty_catalog.xml
+++ b/app/src/main/res/layout/presenty_catalog.xml
@@ -107,15 +107,14 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fillViewport="true"
             android:clipToPadding="false">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:weightSum="1">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/noPrData"
@@ -134,18 +133,18 @@
 
                 <android.support.v4.widget.NestedScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="413dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="0.64">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="vertical" >
 
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/pr_recycler_view"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:scrollbars="vertical"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
@@ -157,7 +156,7 @@
 
                 <Button
                     android:layout_width="match_parent"
-                    android:layout_height="35dp"
+                    android:layout_height="wrap_content"
                     android:text="UPDATE"
                     android:visibility="gone"
                     android:clickable="true"
@@ -169,7 +168,7 @@
                     android:textStyle="normal|bold"
                     android:textAlignment="center"
                     android:layout_marginRight="10dp"
-                    android:layout_marginTop="5dp" />
+                    android:layout_marginTop="10dp" />
 
             </LinearLayout>
         </ScrollView>
