--- a/app/src/main/res/layout/presenty_catalog.xml
+++ b/app/src/main/res/layout/presenty_catalog.xml
@@ -21,6 +21,11 @@
                 layout="@layout/tool_bar"
                 android:layout_width="match_parent"></include>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/colorWhite"/>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
