--- a/app/src/main/res/layout-land/activity_org.xml
+++ b/app/src/main/res/layout-land/activity_org.xml
@@ -5,13 +5,15 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/appBgColor">
-
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar"
         style="@style/BB_BottomBarBadge_Text">
     </include>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/colorWhite"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
