--- a/app/src/main/res/layout-land/student_catalog.xml
+++ b/app/src/main/res/layout-land/student_catalog.xml
@@ -18,7 +18,10 @@
             layout="@layout/tool_bar"
             android:layout_height="match_parent"
             android:layout_weight="1"></include>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/colorWhite"/>
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
