--- a/app/src/main/res/layout-v21/activity_daily_teaching.xml
+++ b/app/src/main/res/layout-v21/activity_daily_teaching.xml
@@ -17,7 +17,10 @@
             android:id="@+id/tool_bar"
             layout="@layout/tool_bar">
         </include>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/colorWhite"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
