--- a/app/src/main/res/layout/activity_class.xml
+++ b/app/src/main/res/layout/activity_class.xml
@@ -25,7 +25,10 @@
             android:text="@string/no_data"
             android:layout_width="match_parent">
         </include>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/colorWhite"/>
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
