--- a/app/src/main/res/layout/activity_org.xml
+++ b/app/src/main/res/layout/activity_org.xml
@@ -11,7 +11,10 @@
         layout="@layout/tool_bar"
         style="@style/BB_BottomBarBadge_Text">
     </include>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/colorWhite"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
