--- a/app/src/main/res/layout/calendar_activity.xml
+++ b/app/src/main/res/layout/calendar_activity.xml
@@ -10,7 +10,10 @@
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar"></include>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/colorWhite"/>
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
