--- a/app/src/main/res/layout/off_class_activity.xml
+++ b/app/src/main/res/layout/off_class_activity.xml
@@ -15,7 +15,10 @@
             android:id="@+id/tool_bar"
             layout="@layout/tool_bar"
             android:layout_height="match_parent"></include>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/colorWhite"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
