--- a/app/src/main/res/layout/tab_activity.xml
+++ b/app/src/main/res/layout/tab_activity.xml
@@ -18,6 +18,11 @@
             layout="@layout/tool_bar">
         </include>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/colorWhite"/>
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
