--- a/app/src/main/res/layout-land/activity_org.xml
+++ b/app/src/main/res/layout-land/activity_org.xml
@@ -5,6 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/appBgColor">
+
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar"
@@ -23,20 +24,28 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/org_logo"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/email"
                 android:textStyle="bold"
                 android:textColor="@color/colorAccent"
-                android:textSize="16sp"
+                android:textSize="18dp"
                 android:layout_gravity="end"
                 android:id="@+id/useremail"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="30dp"
-                android:textAlignment="viewStart"
-                android:textAllCaps="true" />
+                android:layout_marginTop="5dp"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:layout_marginBottom="5dp" />
 
             <LinearLayout
                 android:orientation="vertical"
@@ -44,9 +53,9 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:layout_width="353dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="20dp"
                     android:text="@string/choose_organization"
                     android:layout_marginRight="20dp"
@@ -135,7 +144,6 @@
                     app:digitHeight="60dp"
                     app:digitWidth="100dp"
                     app:digitSpacing="50dp" />
-
             </LinearLayout>
 
             <Button
