--- a/app/src/main/res/layout/daily_fill_items.xml
+++ b/app/src/main/res/layout/daily_fill_items.xml
@@ -1,114 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:orientation="horizontal"-->
-    <!--card_view:cardCornerRadius="5dp"-->
-    <!--card_view:cardUseCompatPadding="true" >-->
 <LinearLayout android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/divider">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clickable="true"
-    android:id="@+id/dailyitem_click"
-    android:background="@drawable/draweritem_select"
-    android:orientation="vertical">
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="fill_parent"
-        android:paddingLeft="10dp"
-        android:paddingTop="5dp"
-        android:layout_height="wrap_content"
-        android:paddingRight="10dp"
-        android:orientation="horizontal"
-        android:weightSum="1">
-
-        <TextView
-            android:id="@+id/chapter"
-            android:layout_width="206dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/chapter_text"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:paddingTop="2dp"
-            android:textSize="16sp"
-            android:fontFamily="sans-serif"
-            android:textColor="@color/colorAccent"
-            android:textStyle="bold"
-            android:textAllCaps="false"
-            android:layout_weight="0.58" />
-
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="50dp"
-            android:textColor="@android:color/holo_red_light"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="14sp"
-            android:layout_height="wrap_content"
-            android:text="@string/date"
-            android:layout_gravity="center_horizontal"
-            android:textAlignment="textEnd"
-            android:paddingTop="6dp"
-            android:layout_weight="0.33" />
-
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:orientation="horizontal" >
-        <TextView
-            android:id="@+id/points"
+        android:clickable="true"
+        android:id="@+id/dailyitem_click"
+        android:background="@drawable/draweritem_select"
+        android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="fill_parent"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <TextView
+                android:id="@+id/chapter"
+                android:layout_width="206dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/chapter_text"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:paddingTop="2dp"
+                android:textSize="16sp"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/colorAccent"
+                android:textStyle="bold"
+                android:textAllCaps="false"
+                android:layout_weight="0.58" />
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="50dp"
+                android:textColor="@android:color/holo_red_light"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="14sp"
+                android:layout_height="wrap_content"
+                android:text="@string/date"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="textEnd"
+                android:paddingTop="6dp"
+                android:layout_weight="0.33" />
+
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
-            android:textColor="@color/bb_inActiveBottomBarItemColor"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="14dp"
             android:layout_height="wrap_content"
-            android:text="@string/points"
-            android:layout_gravity="right"
-            android:fontFamily="sans-serif"
-            android:textAlignment="viewStart" />
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:orientation="horizontal" >
+            <TextView
+                android:id="@+id/points"
+                android:layout_width="match_parent"
+                android:textColor="@color/bb_inActiveBottomBarItemColor"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="14dp"
+                android:layout_height="wrap_content"
+                android:text="@string/points"
+                android:layout_gravity="right"
+                android:fontFamily="sans-serif"
+                android:textAlignment="viewStart" />
 
-        <TextView
-            android:id="@+id/dailyid"
-            android:layout_width="0dp"
-            android:textColor="@color/textcolor"
-            android:textSize="15dp"
-            android:visibility="gone"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="@string/dailyid"
-            android:layout_gravity="right" />
+            <TextView
+                android:id="@+id/dailyid"
+                android:layout_width="0dp"
+                android:textColor="@color/textcolor"
+                android:textSize="15dp"
+                android:visibility="gone"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@string/dailyid"
+                android:layout_gravity="right" />
 
 
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="5dp">
-
-        <TextView
-            android:id="@+id/standard"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:textSize="14sp"
-            android:textColor="@color/bb_inActiveBottomBarItemColor"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_height="wrap_content"
-            android:text="@string/standard"
-            android:layout_gravity="left"
-            android:fontFamily="sans-serif" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp">
+
+            <TextView
+                android:id="@+id/standard"
+                android:layout_width="wrap_content"
+                android:textSize="14sp"
+                android:textColor="@color/bb_inActiveBottomBarItemColor"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_height="wrap_content"
+                android:text="@string/standard"
+                android:layout_gravity="left"
+                android:fontFamily="sans-serif" />
+
+            <TextView
+                android:id="@+id/sub_class_name"
+                android:layout_width="wrap_content"
+                android:textSize="14sp"
+                android:textColor="@color/bb_inActiveBottomBarItemColor"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:fontFamily="sans-serif" />
+        </LinearLayout>
     </LinearLayout>
 
     <View
@@ -117,4 +120,3 @@
         android:background="@color/bottomLine"/>
 
 </LinearLayout>
-<!--</android.support.v7.widget.CardView>-->
