--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="30dp"
+    android:layout_marginTop="20dp"
     android:weightSum="3"
     android:orientation="vertical">
 
@@ -17,9 +17,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/eracord_logo"
+        app:srcCompat="@drawable/eracord"
         android:id="@+id/imageView4"
-        android:layout_weight="0.75"
         android:layout_marginBottom="20dp"
         android:contentDescription="logo"/>
 
@@ -66,7 +65,8 @@
         android:layout_marginRight="20dp"
         android:textStyle="normal|bold"
         android:background="@color/colorAccent"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_marginBottom="10dp" />
 
 
 </LinearLayout>
