--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="50dp"
-    android:weightSum="3"
     android:orientation="vertical">
 
 
@@ -17,11 +16,12 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/eracord_logo"
+        app:srcCompat="@drawable/eracord"
         android:id="@+id/imageView4"
-        android:layout_weight="0.75"
         android:layout_marginBottom="20dp"
-        android:contentDescription="logo"/>
+        android:contentDescription="logo"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
