added mpin logo

--- a/app/src/main/res/layout-land/activity_pin_layout.xml
+++ b/app/src/main/res/layout-land/activity_pin_layout.xml
@@ -25,26 +25,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <TextView
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/generate_mpin"
-                android:textSize="24sp"
-                android:textColor="@color/colorWhite"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:background="@color/colorAccent"
-                android:textAllCaps="true"
-                android:fontFamily="sans-serif"
-                android:textStyle="normal|bold" />
+                android:layout_height="80dp"
+                app:srcCompat="@drawable/mpin"
+                android:id="@+id/imageView2"
+                android:layout_marginTop="10dp" />
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp">
 
@@ -74,7 +65,6 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp">
 
@@ -103,7 +93,6 @@
                 android:id="@+id/loginuser"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:textColor="@color/colorWhite"
                 android:layout_gravity="center"
